--- a/views/termekek.html
+++ b/views/termekek.html
@@ -161,7 +161,7 @@
         <script src="jquery.slim.min.js"></script>
         <script src="popper.min.js"></script>
         <script src="bootstrap.bundle.min.js"></script>
-        <script src="admin.js"></script>
+        <!-- <script src="admin.js"></script> -->
         <script src="termekek.js"></script><!-- BUG:BUG: BUG: BUG:BUG:-->
 </body>
 
