--- a/views/admin.html
+++ b/views/admin.html
@@ -96,6 +96,9 @@
             <h2>Szótöredékre is szűkíthető</h2>
             <!-- <button type="button" class="btn btn-primary xyzNAME" data-testId="yes" id="xyzID">mi a mano</button> -->
         </div>
+        <div class="text-right">
+            <h6><small>It runs on Synology server © 05/22/2022</small></h6>
+        </div>
     </div>
 
     <!-- NOTE: also sav -->
